--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
-    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
+
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.4'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.2.4'
+
+    implementation 'com.h2database:h2:2.1.214'
+
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
@@ -37,16 +41,9 @@ jmh {
     timeOnIteration = "10s"
 }
 
-tasks.register('jmhBench1') {
+tasks.register('jmhSigningBenchmark') {
     doFirst {
-        jmh.includes = ["Bench1"]
-    }
-    finalizedBy 'jmh'
-}
-
-tasks.register('jmhBench2') {
-    doFirst {
-        jmh.includes = ["Bench2"]
+        jmh.includes = ["SigningBenchmark"]
     }
     finalizedBy 'jmh'
 }
